# cpp-gamefilesystem

./: CHANGES.md  CMakeLists.txt  CONTRIBUTORS.md  COPYRIGHT  HEADER  LICENCE-MIT  MAINTAINERS.md  README.md  Tests.cmake
include/ReversingSpace/: GameFileSystem.hpp
include/ReversingSpace/GameFileSystem/: API.hpp  Archive.hpp  Core.hpp  Directory.hpp  File.hpp  FileSystem.hpp  PlatformFile.hpp  StorageServer.hpp
include/ReversingSpace/Storage/: Core.hpp  Directory.hpp  File.hpp
source/POSIX/: File.cpp  View.cpp
source/POSIX/Storage/: File.cpp  View.cpp
source/Windows/: File.cpp  View.cpp
source/Windows/Storage/: View.cpp
source/common/: Directory.cpp  File.cpp  View.cpp
source/common/GameFileSystem/: PlatformFile.cpp
source/common/Storage/: File.cpp  View.cpp
tests/archivesystem/: main.cpp
tests/internals/: main.cpp
tests/internals-rw/: main.cpp
tests/storageserver/: main.cpp
